--- a/lkwt_boot/src/main/resources/application.properties
+++ b/lkwt_boot/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3307/lkwt
 spring.datasource.username=chiroro
 spring.datasource.password=chiroro
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
