--- a/lkwt_boot/pom.xml
+++ b/lkwt_boot/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<security-version>5.1.7.RELEASE</security-version>
 	</properties>
 
 	<dependencies>
@@ -91,6 +92,13 @@
 			<version>2.9.2</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
+	
 	</dependencies>
 
 	<build>
