--- a/lkwt_boot/src/main/resources/application.properties
+++ b/lkwt_boot/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+# spring.datasource.url=jdbc:mariadb://10.10.10.132:3306/lkwt
 spring.datasource.url=jdbc:mariadb://localhost:3307/lkwt
 spring.datasource.username=chiroro
 spring.datasource.password=chiroro
 
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
